data/derived/fa15/progs/unify/prog3453.ml.out
Characters 128-144:
  |h'::t' -> if h+h' > 10 then addHelper (t,t'):: [1 + h' + h] 
                               ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
